# GrandmaCare

./: .gitignore  README.md  TEAMPLAN.md  agents.py  app.py  cognee_config.py  cognee_mcp.py  cognee_test.py  cognee_ui.py  pyproject.toml  requirements.txt  tools.py
mobile/: .env.example  App.tsx  alarm.ts  app.json  eas.json  index.ts  package.json  pnpm-lock.yaml  storage.ts
web/: app.js  index.html  style.css
